[tool.poetry]
name = "yocto"
version = "0.1.0"
description = "learning yocto and investigating kernel"
authors = ["Javad Ramezanzadeh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kas = "^4.0"
pyyaml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
